# Dr_Quine

./: .cppcheckrc  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
ASM/: Makefile
C/: Colleen.c  Makefile
bonus/: README.md  quine.py
cmake/: Norm.cmake  Tests.cmake
docker/: Dockerfile  docker-compose.yml
docs/: Docker.md
docs/command/: Bonus.md  CMake.md  Command.md  Cppcheck.md  Examples.md  Makefile.md  Norminette.md  Windows_Workflow.md
docs/cppcheck/: CPPCHECK-MISRA-C2012.md
docs/main/: tr.subject.md
docs/normcheck/: NORMCHECK.md
docs/phases/: Phase10_Bonus.md  Phase2_Colleen_C.md  Phase3_Colleen_ASM.md  Phase4_Grace_C.md  Phase5_Grace_ASM.md  Phase6_Sully_C.md  Phase7_Sully_ASM.md  Phase8_Testing_Makefile.md  Phase9_Norm_Cppcheck.md
docs/presentation/: History.md  Presentation.md  Program1_Colleen.md  Program2_Grace.md  Program3_Sully.md
docs/report/: DOCKER_TEST_REPORT.md  END_TO_END_REPORT.md  FINAL_TEST_REPORT.md  Report.md  SPEC_COMPLIANCE.md
docs/rules/: Rules.md
docs/tasks/: Tasks.md
output/ASM/: Colleen.s  Grace.s  Sully.s
output/C/: Grace.c  Sully.c
scripts/: check_all.sh  check_cppcheck.sh  check_norm.sh
src/: colleen.c  colleen.s  grace.c  grace.s  sully.c  sully.s
tests/: test_all.sh  test_colleen.sh  test_errors.sh  test_grace.sh  test_python.sh  test_quines.sh  test_sully.sh
